changing name for spectra

--- a/src/app/components/Buttons/BurgerButton.module.css
+++ b/src/app/components/Buttons/BurgerButton.module.css
@@ -1,9 +1,6 @@
 .container {
-  width: 100%;
-  position:absolute;
   top: 0;
   left: 0;
-  height: 80px;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -11,6 +8,7 @@
   background-color: transparent;
   border: none;
   outline: none;
+  cursor: pointer;
 }
 
 .menuIcon {
