--- a/src/app/components/Colaborate/Colaborate.module.css
+++ b/src/app/components/Colaborate/Colaborate.module.css
@@ -1,4 +1,4 @@
-.laruinaLogo {
+.logo {
   filter: drop-shadow(1px 1px 8px black)
 }
 
@@ -19,7 +19,6 @@
   background-color: #171717;
   filter: drop-shadow(0px 0px 4px black);
   color: aliceblue;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-size: 20px;
   transition-duration: .3s;
   border: none;
