--- a/src/app/components/ConnectedApps/ConnectedApps.module.css
+++ b/src/app/components/ConnectedApps/ConnectedApps.module.css
@@ -14,6 +14,8 @@
   border-radius: 5px;
   color: var(--nhexa-white);
   align-items: center;
+  font-family: Bebas Neue;
+  font-weight: 400;
 }
 
 .appsContainer a {
