--- a/src/app/components/SearchBar/SearchBar.module.css
+++ b/src/app/components/SearchBar/SearchBar.module.css
@@ -16,22 +16,24 @@
   border-top: none;
   border-right: none;
   border-left: none;
-  border-color: rgba(255, 255, 255, 0.452);
+  border-color: var(--nhexa-white);
   height: 25px;
   position: relative;
   color: var(--nhexa-white);
   opacity: 0;
   width: 40px;
   transition-duration: .5s;
+  border-radius: 5px;
+  padding-inline: 5px;
 }
 
 .liSearchBar:hover,
 .liSearchBar:active,
 .liSearchBar:focus {
-  border-radius: 5px;
   width: 200px;
   opacity: .9;
   background-color: transparent;
+  border-color: var(--nhexa-color);
 }
 
 .mediaSearch {
