--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -3,12 +3,13 @@ ul, li{
 }
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-weight: 500;
+  font-family: Poppins;
+  font-weight: 600;
   
   --nhexa-white: #e5e5e5;
   --nhexa-color: #69b1b8;
 
+  background-color: #000000;
   background: linear-gradient(168deg, #000000 20% , #171717 120%);
   --primary-white: #f0f0f0;
   overflow-x: hidden;
@@ -60,6 +61,11 @@ code {
 }
 ::-webkit-scrollbar-thumb:hover {
   background: #fff4;
+}
+
+button {
+  font-family: Bebas Neue;
+  font-weight: 500;
 }
 
 button:disabled:hover {
