using old la ruina tv for new streaming app spectra

--- a/src/app/components/Slider/Slider.module.css
+++ b/src/app/components/Slider/Slider.module.css
@@ -26,6 +26,8 @@
   margin: 0;
   padding: 0;
   width: 100%;
+  max-width: 2000px;
+
   margin-bottom: 1rem;
   position: relative;
   display: flex;
