--- a/src/app/components/Buttons/LogoButton.module.css
+++ b/src/app/components/Buttons/LogoButton.module.css
@@ -57,15 +57,15 @@
 .type {
   margin: 0;
   padding: 0;
-  font-family: Game-Of-Squids; 
-  font-size: 18px;
+  font-family: Spectra; 
+  font-size: 15px;
   color: var(--nhexa-white);
 }
 
 .subtitle {
   color: var(--nhexa-color);
   font-size: 8px;
-  margin-top: -9px;
+  margin-top: -2px;
 }
 
 .openMenuButton {
