--- a/src/app/components/ConnectedApps/ConnectedApps.module.css
+++ b/src/app/components/ConnectedApps/ConnectedApps.module.css
@@ -22,17 +22,28 @@
   width: 100%;
 }
 
-.appsContainer li {
-  transition-duration: .4s;
-  background-color: #171717;
-  height: 40px;
+.appsContainer a li {
+  gap: 1rem;
+  margin: 0;
+  padding: 0;
   width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  transition-duration: .4s;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #171717;
   border: solid rgb(130, 128, 128) 1px;
-  border-radius: 5px;
   box-shadow: 0px 0px 4px rgb(130, 128, 128);
+}
+
+.appsContainer a {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .appsContainer li {
@@ -42,7 +53,7 @@
 .appsContainer li:hover {
   cursor: pointer;
   border-color: var(--nhexa-white);
-  background: linear-gradient(to top, rgb(255, 255, 255), #171717 99%);
+  background: #ffffff;
   color: #171717;
 }
 
