--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -7,7 +7,7 @@ ul, li{
   font-weight: 600;
   
   --nhexa-white: #e5e5e5;
-  --nhexa-color: #69b1b8;
+  --nhexa-color: #5086b0;
 
   background-color: #000000;
   background: linear-gradient(168deg, #000000 20% , #171717 120%);
