--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,7 +13,7 @@
 
 @font-face {
   font-family: Spectra;
-  src: url('../assets/fonts/Spectra.ttf');
+  src: url('../assets/fonts/Spectra.otf');
 }
 
 .loader {
