--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -8,6 +8,7 @@ ul, li{
   
   --nhexa-white: #e5e5e5;
   --nhexa-color: #5086b0;
+  --spectra-logo: #c70049;
 
   background-color: #000000;
   background: linear-gradient(168deg, #000000 20% , #171717 120%);
