--- a/src/app/components/Admin/ContentUpdate/ContentUpdate.module.css
+++ b/src/app/components/Admin/ContentUpdate/ContentUpdate.module.css
@@ -37,7 +37,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  border-color: #171717;
+  border-color: var(--spectra-black);
   border-width: 1px;
   border-radius: 15px;
   gap: .5rem;
@@ -58,7 +58,7 @@
   font-size: 12px;
   margin-top: -3px;
   margin-left: -.25rem;
-  background-color: #171717;
+  background-color: var(--spectra-black);
   border-radius: 3px;
   color: var(--nhexa-white);
   padding-left: .5rem;
@@ -93,7 +93,7 @@
   width: 50%;
   align-items: center;
   justify-content: center;
-  border-color: #171717;
+  border-color: var(--spectra-black);
   border-width: 1px;
   text-align: center;
   padding-top: 1rem;
@@ -108,7 +108,7 @@
 }
 
 .imgSlrVsr label {
-  background-color: #171717;
+  background-color: var(--spectra-black);
   color: #fff;
   border-radius: 5px;
   padding-left: 1rem;
@@ -151,8 +151,8 @@ textarea {
 
 .btnContinuar:hover,
 .btnVolver:hover {
-  background: linear-gradient(to bottom, #171717, rgba(0, 0, 0, 0.679));
-  background-color: #171717;
+  background: linear-gradient(to bottom, var(--spectra-black), rgba(0, 0, 0, 0.679));
+  background-color: var(--spectra-black);
   color: #ffffff;
   transition-duration: 0.2s;
 }
@@ -161,7 +161,7 @@ textarea {
   width: 50vw;
   margin-left: 25vw;
   height: 10px;
-  background-color: #171717;
+  background-color: var(--spectra-black);
   margin-bottom: 20px;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
@@ -180,7 +180,7 @@ textarea {
 }
 
 .checkboxes button {
-  background-color: #171717;
+  background-color: var(--spectra-black);
   color: #ffffff;
   border: none;
   border-radius: 5px;
