--- a/src/app/components/Admin/UserList/UserList.module.css
+++ b/src/app/components/Admin/UserList/UserList.module.css
@@ -16,7 +16,7 @@
 }
 
 .adminButton {
-  background-color: #171717;
+  background-color: var(--spectra-black);
   border-radius: 5px;
   padding: .3rem;
   padding-left: 1rem;
@@ -59,7 +59,7 @@
   background-color: rgb(1, 1, 1);
   color: rgba(255, 255, 255, 0.854);
   border-radius: 15px;
-  box-shadow: 0px 0px 4px #171717;
+  box-shadow: 0px 0px 4px var(--spectra-black);
   transition-duration: .4s;
 }
 
@@ -74,7 +74,7 @@
   background-color: rgba(0, 0, 0, 0.739);
   color: rgba(255, 255, 255, 0.854);
   border-radius: 15px;
-  box-shadow: 0px 0px 4px #171717;
+  box-shadow: 0px 0px 4px var(--spectra-black);
   transition-duration: .4s;
   height: 80px;
 }
