--- a/src/app/components/Buttons/BurgerButton.module.css
+++ b/src/app/components/Buttons/BurgerButton.module.css
@@ -1,26 +1,10 @@
 .container {
-  top: 0;
-  left: 0;
-  text-align: center;
+  width: 18px;
+  height: 100%;
+  cursor: pointer;
   display: flex;
-  justify-content: center;
   align-items: center;
-  background-color: transparent;
-  border: none;
-  outline: none;
-  cursor: pointer;
 }
-
-.menuIcon {
-  opacity: .7;
-  z-index: 99999;
-}
-
-.menuIcon:hover {
-  opacity: 1;
-  cursor: pointer;
-}
-
 
 @media only screen and (min-width: 1300px) {
   .container {
