--- a/src/app/components/Buttons/LogoButton.module.css
+++ b/src/app/components/Buttons/LogoButton.module.css
@@ -58,7 +58,7 @@
   padding: 0;
   font-family: Spectra; 
   font-size: 25px;
-  color: var(--spectra-logo);
+  color: var(--spectra-color);
 }
 
 .subtitle {
