--- a/src/app/components/Buttons/PrimaryButton.module.css
+++ b/src/app/components/Buttons/PrimaryButton.module.css
@@ -14,8 +14,8 @@
 }
 
 .primaryButton:hover {
-  background: linear-gradient(to bottom, #171717, rgba(0, 0, 0, 0.679));
-  background-color: #171717;
+  background: linear-gradient(to bottom, var(--spectra-black), rgba(0, 0, 0, 0.679));
+  background-color: var(--spectra-black);
   color: #ffffff;
   transition-duration: 0.2s;
 }
