--- a/src/app/components/Colaborate/Colaborate.module.css
+++ b/src/app/components/Colaborate/Colaborate.module.css
@@ -16,7 +16,7 @@
   bottom: 30px;
   border: none;
   border-radius: 70px;
-  background-color: #171717;
+  background-color: var(--spectra-black);
   filter: drop-shadow(0px 0px 4px black);
   color: aliceblue;
   font-size: 20px;
