--- a/src/app/components/MySubscription/MySubscription.module.css
+++ b/src/app/components/MySubscription/MySubscription.module.css
@@ -64,7 +64,7 @@
   position: absolute;
   border: none;
   border-radius: 70px;
-  background-color: #171717;
+  background-color: var(--spectra-black);
   filter: drop-shadow(0px 0px 4px black);
   color: aliceblue;
   font-size: 20px;
