--- a/src/app/components/RequestProfile/RequestProfile.module.css
+++ b/src/app/components/RequestProfile/RequestProfile.module.css
@@ -76,67 +76,30 @@
 	justify-content: center;
 }
 
-.likeIcon,
-.listIcon,
-.userIcon,
+.icon {
+	filter: grayscale(1);
+	transition-duration: 1s;
+	opacity: .9;
+	cursor: pointer;
+}
+
 .profilePic {
+	cursor: pointer;
 	width: 30px;
 	filter: grayscale(1);
 	transition-duration: 1s;
 	opacity: .9;
-}
-
-.profilePic {
 	border-radius: 100%;
 	border: solid;
 	border-width: 2px;
 	filter: drop-shadow(0px 0px 4px black)
 }
 
-.adminIcon {
-	height: 30px;
-	filter: grayscale(1);
-	transition-duration: 1s;
-	opacity: .9;
-}
-
-.notificationIcon {
-	width: 30px;
-	filter: grayscale(1);
-	transition-duration: 1s;
-	opacity: .9;
-	rotate: -90deg;
-	margin-left: 5px;
-}
-
-.subscriptionIcon {
-	width: 30px;
-	filter: grayscale(1);
-	transition-duration: 1s;
-	opacity: .9;
-}
-
-.logoutIcon {
-	width: 30px;
-	filter: grayscale(1);
-	transition-duration: 1s;
-	opacity: .9;
-}
-
-.listIcon:hover,
-.likeIcon:hover,
-.userIcon:hover,
-.adminIcon:hover,
-.logoutIcon:hover,
-.profilePic:hover,
-.subscriptionIcon:hover,
-.notificationIcon:hover {
-	cursor: pointer;
+.icon:hover {
 	filter: grayscale(.2);
 	opacity: 1;
 	filter: drop-shadow(0px 0px 8px rgb(255, 255, 255));
 	transition-duration: 1s;
 }
-
 
 @media only screen and (max-width: 1300px) {}
