--- a/src/app/pages/Checkout/Checkout.module.css
+++ b/src/app/pages/Checkout/Checkout.module.css
@@ -20,7 +20,7 @@
   bottom: 30px;
   border: none;
   border-radius: 70px;
-  background-color: #171717;
+  background-color: var(--spectra-black);
   filter: drop-shadow(0px 0px 4px black);
   color: aliceblue;
   font-size: 20px;
@@ -37,7 +37,7 @@
   bottom: 30px;
   border: none;
   border-radius: 70px;
-  background-color: #171717;
+  background-color: var(--spectra-black);
   filter: drop-shadow(0px 0px 4px black);
   font-size: 20px;
   transition-duration: .3s;
@@ -51,5 +51,5 @@
 
 .btnSubmit:hover {
   background-color: rgb(231, 231, 231);
-  color: #171717;
+  color: var(--spectra-black);
 }
