--- a/src/app/utils/InfoCanvas.module.css
+++ b/src/app/utils/InfoCanvas.module.css
@@ -18,7 +18,7 @@
 
 .infoCont {
     width: 100%;
-    background-color: #171717;
+    background-color: var(--spectra-black);
     border-radius: 3px;
     transition-duration: 1s;
     filter: drop-shadow(0px 0px 10px black);
@@ -40,7 +40,7 @@
 .buttonsContainer {
     padding: 0;
     width: 50px;
-    background: linear-gradient(to right, rgba(105, 105, 105, 0.267), #171717);
+    background: linear-gradient(to right, rgba(105, 105, 105, 0.267), var(--spectra-black));
     backdrop-filter: blur(2px);
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
@@ -67,7 +67,7 @@
 }
 
 .blackCanvas {
-    background: linear-gradient(to left, rgba(105, 105, 105, 0.267), #171717);
+    background: linear-gradient(to left, rgba(105, 105, 105, 0.267), var(--spectra-black));
     backdrop-filter: blur(2px);
     height: 100%;
     padding-left: 10px;
