--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -301,8 +301,8 @@ h4 {
 
 .button-primary:hover,
 .button-watch:hover {
-  background: linear-gradient(to bottom, #171717, rgba(0, 0, 0, 0.679));
-  background-color: #171717;
+  background: linear-gradient(to bottom, var(--spectra-black), rgba(0, 0, 0, 0.679));
+  background-color: var(--spectra-black);
   color: #ffffff;
   transition-duration: 0.2s;
 }
@@ -313,7 +313,7 @@ h4 {
 }
 
 .button-secondary:hover {
-  background-color: #171717;
+  background-color: var(--spectra-black);
   transition-duration: 0.5s;
 }
 
@@ -370,7 +370,7 @@ h4 {
 .button-back:hover,
 .buttonAddToPlaylist:hover,
 .button-add-favorite:hover {
-  background-color: #171717;
+  background-color: var(--spectra-black);
   transition-duration: 0.5s;
   filter: grayscale(.1);
 }
@@ -392,7 +392,7 @@ h4 {
 
 .button-back:hover,
 .button-add-favorite:hover {
-  background-color: #171717;
+  background-color: var(--spectra-black);
   transition-duration: 0.5s;
 }
 
